# slightly_artefactual_raytracer

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  ray_context.rs  renderer.rs  scene.rs  scene_objects.rs  subsampling_renderer.rs
src/basic/: color.rs  material.rs  mod.rs  point.rs  ray.rs  ray_context.rs
src/objects/: cuboid.rs  dummy_object.rs  lamp.rs  marching_helpers.rs  mod.rs  object_types.rs  polygons.rs  room.rs  sphere.rs
src/renderers/: mod.rs  progress_bar.rs  renderer.rs  scene.rs  simple_renderer.rs  subsampling_renderer.rs
src/types/: camera.rs  color.rs  lamp.rs  matrix.rs  mod.rs  object_types.rs  objects.rs  point.rs  ray_context.rs  renderer.rs  scene.rs  subsampling_renderer.rs
src/types/basic/: color.rs  material.rs  matrix.rs  mod.rs  point.rs  ray.rs
src/types/objects/: cuboid.rs  dummy_object.rs  lamp.rs  marching_helpers.rs  mod.rs  object_types.rs  polygons.rs  room.rs  sphere.rs
