[package]
name = "slightly_artefactual_raytracer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
indicatif = { version = "0.17", features = ["rayon"] }
iter_fixed = "0.3"
rayon = "1.7"
